--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p>&copy; 2026 Vilmar Silveira dos Santos.</p>
         <div class="social-links">
             <a href="https://github.com/VilmarSilveiraDev" target="_blank">GitHub</a> | 
-            <a href="https://www.linkedin.com/in/SEU_PERFIL_AQUI" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/vilmar-silveira-dos-santos-1b5367312/" target="_blank">LinkedIn</a>
         </div>
     </footer>
 
