--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vilmar Silveira | Software Engineer & RPA Specialist</title>
     
-    <meta name="description" content="Software Engineer especializado em automação de processos, RPA, Chatbots para WhatsApp e arquitetura de sistemas. Criador do Sistema RADAR.">
+    <meta name="description" content="Software Engineer especializado em RPA, Automação, Chatbots WhatsApp e Web Apps. Criador do Sistema RADAR.">
     <meta name="keywords" content="Vilmar Silveira, Software Engineer, RPA, Python, Go, React, WhatsApp Chatbot, Sistema RADAR, Automação">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,12 +16,16 @@
 </head>
 <body>
 
+    <div class="translate-container">
+        <div id="google_translate_element"></div>
+    </div>
+
     <header>
         <p class="code-font">// Olá, eu sou</p>
         <h1>Vilmar Silveira</h1>
         <p class="subtitle">
-            <strong>Software Engineer</strong> especializado em <strong>RPA</strong> e sistemas escaláveis. 
-            Transformo processos complexos em automações eficientes com Python, Go e React.
+            <strong>Software Engineer</strong> especializado em <strong>RPA</strong> e sistemas de alta escala. 
+            Desenvolvedor Full Stack focado em Python, Go, React e Automação de Processos.
         </p>
     </header>
 
@@ -30,15 +34,15 @@
         <div class="grid">
             <div class="card">
                 <h3>Backend & RPA</h3>
-                <p>Desenvolvimento de robôs com <strong>Python/Selenium</strong> e serviços de alta performance em <strong>Go</strong> (gRPC).</p>
+                <p>Criação de robôs com <strong>Python/Selenium</strong> e serviços de alta performance em <strong>Go</strong> (gRPC).</p>
             </div>
             <div class="card">
                 <h3>Chatbots & WhatsApp</h3>
-                <p>Criação de fluxos inteligentes e automação de atendimento via <strong>WhatsApp API</strong>.</p>
+                <p>Automação de atendimento e fluxos inteligentes via <strong>WhatsApp API</strong>.</p>
             </div>
             <div class="card">
                 <h3>Web Apps & Interfaces</h3>
-                <p>Aplicações modernas e responsivas com <strong>React</strong>, focadas em dashboards e gestão de dados.</p>
+                <p>Dashboards e sistemas de gestão modernos com <strong>React</strong> e integração de APIs.</p>
             </div>
         </div>
     </section>
@@ -47,7 +51,7 @@
         <h2>Projeto em Destaque</h2>
         <div class="card featured">
             <h3>Sistema RADAR</h3>
-            <p>Ecossistema modular e descentralizado que processa mais de <strong>2 milhões de encomendas diariamente</strong>. Utiliza robôs inteligentes que geram novas instâncias automaticamente para garantir o processamento.</p>
+            <p>Ecossistema modular que processa mais de <strong>2 milhões de encomendas diariamente</strong>. Utiliza arquitetura de robôs inteligentes para garantir a integridade e análise de dados em tempo real.</p>
             <div class="tech-tags">
                 <span>Go</span> <span>Python</span> <span>gRPC</span> <span>PostgreSQL</span> <span>React</span>
             </div>
@@ -59,7 +63,7 @@
         <div class="experience-item">
             <div class="date">2014 - Presente</div>
             <h3>Desenvolvedor de Sistemas @ Correios</h3>
-            <p>Mais de 10 anos atuando na vanguarda da automação postal, desenvolvendo soluções de RPA e sistemas de monitoramento em tempo real.</p>
+            <p>Mais de 10 anos transformando processos manuais em automações digitais complexas e seguras.</p>
         </div>
     </section>
 
@@ -67,9 +71,20 @@
         <p>&copy; 2026 Vilmar Silveira dos Santos.</p>
         <div class="social-links">
             <a href="https://github.com/VilmarSilveiraDev" target="_blank">GitHub</a> | 
-            <a href="https://www.linkedin.com/in/vilmar-silveira-dos-santos-1b5367312/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/SEU_LINK_AQUI" target="_blank">LinkedIn</a>
         </div>
     </footer>
+
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+            new google.translate.TranslateElement({
+                pageLanguage: 'pt',
+                layout: google.translate.TranslateElement.InlineLayout.SIMPLE,
+                autoDisplay: false
+            }, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 </body>
 </html>
